--- a/index.html
+++ b/index.html
@@ -121,6 +121,201 @@ My research focuses on Multimodal AI (Vision-Language Models), 3D Computer Visio
 I actively collaborate with international scholars on projects targeting top computer vision venues.
       </p>
     </div>
+
+
+
+
+
+
+<!-- Publications Section -->
+<section id="publications" class="py-20 bg-white">
+  <div class="max-w-screen-lg mx-auto px-6" data-aos="fade-up">
+    <h2 class="text-4xl font-bold mb-8 text-center uppercase tracking-wide">📑 Publications</h2>
+
+    <!-- Filter & Search -->
+    <div class="flex justify-center items-center gap-4 mb-8">
+      <button
+        id="filter-all"
+        data-count="all"
+        class="btn-count bg-blue-600 hover:bg-blue-700 text-white px-5 py-2 rounded-full font-medium transition"
+      >
+        All
+      </button>
+      <input
+        id="pub-search"
+        type="search"
+        placeholder="🔍 Search publications..."
+        class="border border-gray-300 rounded-full px-4 py-2 w-1/3 focus:outline-none focus:ring-2 focus:ring-blue-500"
+      />
+    </div>
+
+    <!-- Publications Table -->
+    <div class="overflow-x-auto shadow-lg rounded-lg bg-white">
+      <table id="pub-table" class="min-w-full divide-y divide-gray-200">
+        <thead class="bg-gray-100">
+          <tr>
+            <th class="px-6 py-3 text-left text-sm font-semibold text-gray-700 uppercase">ID</th>
+            <th class="px-6 py-3 text-left text-sm font-semibold text-gray-700 uppercase">Status</th>
+            <th class="px-6 py-3 text-left text-sm font-semibold text-gray-700 uppercase">Title</th>
+            <th class="px-6 py-3 text-left text-sm font-semibold text-gray-700 uppercase">Details</th>
+          </tr>
+        </thead>
+
+        <tbody class="divide-y divide-gray-100">
+          <!-- Publication 1 -->
+          <tr>
+            <td class="px-6 py-4 text-sm text-gray-700 font-medium">#001</td>
+            <td class="px-6 py-4 text-sm text-gray-600">Under Review (AAAI 2026)</td>
+            <td class="px-6 py-4 font-medium text-gray-800">
+              Test-Time Domain Adaptation for 3D Vision-Language Foundation Models (3D VLFMs)
+            </td>
+            <td class="px-6 py-4 text-sm text-gray-600">
+              First author — Phase 1 accepted | 4 reviewers gave a score of 6 in Phase 2 | Currently in rebuttal
+              <br />
+              <a
+                href="https://github.com/shining0611armor/shining0611armor.github.io/blob/main/Images/TTH.PNG"
+                target="_blank"
+                class="text-blue-500 hover:text-blue-700 underline"
+              >
+                View Image
+              </a>
+            </td>
+          </tr>
+
+          <!-- Publication 2 -->
+          <tr>
+            <td class="px-6 py-4 text-sm text-gray-700 font-medium">#002</td>
+            <td class="px-6 py-4 text-sm text-gray-600">Under Review (WACV 2026)</td>
+            <td class="px-6 py-4 font-medium text-gray-800">
+              Object Hallucination Mitigation in Large Vision-Language Models
+            </td>
+            <td class="px-6 py-4 text-sm text-gray-600">
+              First author — in final decision phase
+              <br />
+              <a
+                href="https://github.com/shining0611armor/shining0611armor.github.io/blob/main/Images/Uni-adapter.PNG"
+                target="_blank"
+                class="text-blue-500 hover:text-blue-700 underline"
+              >
+                View Image
+              </a>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</section>
+
+
+<!-- Publications -->
+<section id="publications" class="py-20 bg-white">    <div class="overflow-x-auto shadow-lg rounded-lg bg-white">
+      <table id="pub-table" class="min-w-full divide-y divide-gray-200">
+        <thead class="bg-gray-200">
+          <tr>
+            <th class="px-6 py-3 text-left text-sm font-medium text-gray-700 uppercase">Status</th>
+            <th class="px-6 py-3 text-left text-sm font-medium text-gray-700 uppercase">Title</th>
+            <th class="px-6 py-3 text-left text-sm font-medium text-gray-700 uppercase">Details</th>
+          </tr>
+        </thead>
+        <tbody class="divide-y divide-gray-100">
+          <tr>
+            <td class="px-6 py-4 text-sm text-gray-600">Under Review (AAAI 2026)</td>
+            <td class="px-6 py-4">
+              Test-Time Domain Adaptation for 3D Vision-Language Foundation Models (3D VLFMs)
+            </td>
+            <td class="px-6 py-4 text-sm text-gray-600">
+              First author, Phase 1 accepted | 4 reviewers gave a score of 6 in Phase 2 | Currently in rebuttal
+              <br />
+              <a
+                href="https://github.com/shining0611armor/shining0611armor.github.io/blob/main/Images/TTH.PNG"
+                target="_blank"
+                class="text-blue-500 underline"
+              >
+                View Image
+              </a>
+            </td>
+          </tr>
+
+          <tr>
+            <td class="px-6 py-4 text-sm text-gray-600">Under Review (WACV 2026)</td>
+            <td class="px-6 py-4">
+              Object Hallucination Mitigation in Large Vision-Language Models
+            </td>
+            <td class="px-6 py-4 text-sm text-gray-600">
+              First author, in final decision phase
+              <br />
+              <a
+                href="https://github.com/shining0611armor/shining0611armor.github.io/blob/main/Images/Uni-adapter.PNG"
+                target="_blank"
+                class="text-blue-500 underline"
+              >
+                View Image
+              </a>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</section>
+
+
+
+
+
+   
+
+
+<!-- Publications -->
+<section id="publications" class="py-20 bg-white">
+  <div class="max-w-screen-lg mx-auto px-6" data-aos="fade-up">
+    <h2 class="text-4xl font-bold mb-8 text-center uppercase tracking-wide">📑 Publications</h2>
+    <div class="flex justify-center gap-4 mb-6">
+      <button data-count="all" class="btn-count bg-blue-500 text-white px-4 py-2 rounded-full transition">All</button>
+      <input id="pub-search" type="search" placeholder="🔍 Search is beautiful..." class="ml-6 border border-gray-300 rounded-full px-4 py-2 w-1/3 focus:outline-none focus:ring-2 focus:ring-blue-500" />
+    </div>
+
+    <div class="overflow-x-auto shadow-lg rounded-lg bg-white">
+      <table id="pub-table" class="min-w-full divide-y divide-gray-200">
+        <thead class="bg-gray-200">
+          <tr>
+            <th class="px-6 py-3 text-left text-sm font-medium text-gray-700 uppercase">Status</th>
+            <th class="px-6 py-3 text-left text-sm font-medium text-gray-700 uppercase">Title</th>
+            <th class="px-6 py-3 text-left text-sm font-medium text-gray-700 uppercase">Topic</th>
+          </tr>
+        </thead>
+        <tbody class="divide-y divide-gray-100">
+          <tr>
+            <td class="px-6 py-4 text-sm text-gray-600">Under Review (AAAI 2026)</td>
+            <td class="px-6 py-4">Test-Time Domain Adaptation for 3D Vision-Language Foundation Models (3D VLFMs)</td>
+            <td class="px-6 py-4 text-sm text-gray-600">First author, Phase 1 accepted | 4 reviewers gave a score of 6 in Phase 2 | Currently in rebuttal</td>
+           https://github.com/shining0611armor/shining0611armor.github.io/blob/main/Images/TTH.PNG
+          </tr>
+          <tr>
+            <td class="px-6 py-4 text-sm text-gray-600">Under Review (WACV 2026)</td>
+            <td class="px-6 py-4">Object Hallucination Mitigation in Large Vision-Language Models</td>
+            <td class="px-6 py-4 text-sm text-gray-600">First autor, in final decision phase</td>
+           https://github.com/shining0611armor/shining0611armor.github.io/blob/main/Images/Uni-adapter.PNG
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <div class="mt-6 text-center">
+      </a>
+    </div>
+  </div>
+</section>
+
+
+
+   
+
+
+
+
+   
 <section id="highlights" class="py-20 bg-gray-50">
   <div class="max-w-screen-lg mx-auto px-6">
     <h2
