--- a/index.html
+++ b/index.html
@@ -131,212 +131,76 @@ I actively collaborate with international scholars on projects targeting top com
       📑 Publications
     </h2>
 
-    <!-- Filter & Search -->
-    <div class="flex flex-col sm:flex-row justify-center items-center gap-4 mb-8">
-      <button
-        data-count="all"
-        class="btn-count bg-blue-600 hover:bg-blue-700 text-white font-medium px-5 py-2 rounded-full shadow transition"
-      >
-        All
-      </button>
+    <!-- Search -->
+    <div class="flex justify-center mb-10">
       <input
         id="pub-search"
         type="search"
         placeholder="🔍 Search publications..."
-        class="border border-gray-300 rounded-full px-5 py-2 w-full sm:w-1/3 focus:outline-none focus:ring-2 focus:ring-blue-500 transition"
+        class="border border-gray-300 rounded-full px-5 py-2 w-full sm:w-1/2 focus:outline-none focus:ring-2 focus:ring-blue-500 transition"
       />
     </div>
 
-    <!-- Publications Table -->
-    <div class="overflow-x-auto shadow-xl rounded-2xl bg-white border border-gray-100">
-      <table id="pub-table" class="min-w-full divide-y divide-gray-200">
-        <thead class="bg-gray-100">
-          <tr>
-            <th class="px-6 py-3 text-left text-sm font-semibold text-gray-700 uppercase">Status</th>
-            <th class="px-6 py-3 text-left text-sm font-semibold text-gray-700 uppercase">Title</th>
-            <th class="px-6 py-3 text-left text-sm font-semibold text-gray-700 uppercase">Details</th>
-            <th class="px-6 py-3 text-center text-sm font-semibold text-gray-700 uppercase">Preview</th>
-          </tr>
-        </thead>
-        <tbody class="divide-y divide-gray-100">
-          <!-- Publication 1 -->
-          <tr class="hover:bg-gray-50 transition">
-            <td class="px-6 py-4 text-sm text-gray-600">Under Review (AAAI 2026)</td>
-            <td class="px-6 py-4 font-medium text-gray-800">
-              Test-Time Domain Adaptation for 3D Vision-Language Foundation Models (3D VLFMs)
-            </td>
-            <td class="px-6 py-4 text-sm text-gray-600">
-              First author, Phase 1 accepted | 4 reviewers gave a score of 6 in Phase 2 | Currently in rebuttal
-              <br />
+    <!-- Year Section -->
+    <div class="space-y-10">
+      <div>
+        <h4 class="text-2xl font-semibold text-gray-700 border-b border-gray-200 pb-2 mb-6">2026</h4>
+        <ul class="space-y-6">
+          <!-- Paper 1 -->
+          <li class="flex flex-col sm:flex-row items-start gap-4 bg-gray-50 rounded-xl p-4 shadow-sm hover:shadow-md transition">
+            <img
+              src="https://github.com/shining0611armor/shining0611armor.github.io/raw/main/Images/TTH.PNG"
+              alt="3D VLFM paper"
+              class="publication-thumbnail w-28 h-28 object-cover rounded-lg border border-gray-200"
+              loading="lazy"
+            />
+            <div class="publication-content">
               <a
                 href="https://github.com/shining0611armor/shining0611armor.github.io/blob/main/Images/TTH.PNG"
                 target="_blank"
-                class="text-blue-600 hover:underline font-medium"
+                class="text-lg font-semibold text-blue-700 hover:underline"
               >
-                View Full Image
+                Test-Time Domain Adaptation for 3D Vision-Language Foundation Models (3D VLFMs)
               </a>
-            </td>
-            <td class="px-6 py-4 text-center">
-              <a
-                href="https://github.com/shining0611armor/shining0611armor.github.io/blob/main/Images/TTH.PNG"
-                target="_blank"
-              >
-                <img
-                  src="https://github.com/shining0611armor/shining0611armor.github.io/raw/main/Images/TTH.PNG"
-                  alt="Publication Preview"
-                  class="w-20 h-20 object-cover rounded-lg shadow-sm hover:scale-105 transition-transform duration-200"
-                />
-              </a>
-            </td>
-          </tr>
+              <p class="text-sm text-gray-700 mt-1">
+                <strong>Status:</strong> Under Review (AAAI 2026)
+              </p>
+              <p class="text-sm text-gray-600">
+                First author, Phase 1 accepted | 4 reviewers gave a score of 6 in Phase 2 | Currently in rebuttal
+              </p>
+            </div>
+          </li>
 
-          <!-- Publication 2 -->
-          <tr class="hover:bg-gray-50 transition">
-            <td class="px-6 py-4 text-sm text-gray-600">Under Review (WACV 2026)</td>
-            <td class="px-6 py-4 font-medium text-gray-800">
-              Object Hallucination Mitigation in Large Vision-Language Models
-            </td>
-            <td class="px-6 py-4 text-sm text-gray-600">
-              First author, in final decision phase
-              <br />
+          <!-- Paper 2 -->
+          <li class="flex flex-col sm:flex-row items-start gap-4 bg-gray-50 rounded-xl p-4 shadow-sm hover:shadow-md transition">
+            <img
+              src="https://github.com/shining0611armor/shining0611armor.github.io/raw/main/Images/Uni-adapter.PNG"
+              alt="Object Hallucination Mitigation paper"
+              class="publication-thumbnail w-28 h-28 object-cover rounded-lg border border-gray-200"
+              loading="lazy"
+            />
+            <div class="publication-content">
               <a
                 href="https://github.com/shining0611armor/shining0611armor.github.io/blob/main/Images/Uni-adapter.PNG"
                 target="_blank"
-                class="text-blue-600 hover:underline font-medium"
+                class="text-lg font-semibold text-blue-700 hover:underline"
               >
-                View Full Image
+                Object Hallucination Mitigation in Large Vision-Language Models
               </a>
-            </td>
-            <td class="px-6 py-4 text-center">
-              <a
-                href="https://github.com/shining0611armor/shining0611armor.github.io/blob/main/Images/Uni-adapter.PNG"
-                target="_blank"
-              >
-                <img
-                  src="https://github.com/shining0611armor/shining0611armor.github.io/raw/main/Images/Uni-adapter.PNG"
-                  alt="Publication Preview"
-                  class="w-20 h-20 object-cover rounded-lg shadow-sm hover:scale-105 transition-transform duration-200"
-                />
-              </a>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+              <p class="text-sm text-gray-700 mt-1">
+                <strong>Status:</strong> Under Review (WACV 2026)
+              </p>
+              <p class="text-sm text-gray-600">
+                First author, in final decision phase
+              </p>
+            </div>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
 </section>
 
-
-    <!-- Publications Table -->
-    <div class="overflow-x-auto shadow-lg rounded-lg bg-white">
-      <table id="pub-table" class="min-w-full divide-y divide-gray-200">
-        <thead class="bg-gray-100">
-          <tr>
-            <th class="px-6 py-3 text-left text-sm font-semibold text-gray-700 uppercase">ID</th>
-            <th class="px-6 py-3 text-left text-sm font-semibold text-gray-700 uppercase">Status</th>
-            <th class="px-6 py-3 text-left text-sm font-semibold text-gray-700 uppercase">Title</th>
-            <th class="px-6 py-3 text-left text-sm font-semibold text-gray-700 uppercase">Details</th>
-          </tr>
-        </thead>
-
-        <tbody class="divide-y divide-gray-100">
-          <!-- Publication 1 -->
-          <tr>
-            <td class="px-6 py-4 text-sm text-gray-700 font-medium">#001</td>
-            <td class="px-6 py-4 text-sm text-gray-600">Under Review (AAAI 2026)</td>
-            <td class="px-6 py-4 font-medium text-gray-800">
-              Test-Time Domain Adaptation for 3D Vision-Language Foundation Models (3D VLFMs)
-            </td>
-            <td class="px-6 py-4 text-sm text-gray-600">
-              First author — Phase 1 accepted | 4 reviewers gave a score of 6 in Phase 2 | Currently in rebuttal
-              <br />
-              <a
-                href="https://github.com/shining0611armor/shining0611armor.github.io/blob/main/Images/TTH.PNG"
-                target="_blank"
-                class="text-blue-500 hover:text-blue-700 underline"
-              >
-                View Image
-              </a>
-            </td>
-          </tr>
-
-          <!-- Publication 2 -->
-          <tr>
-            <td class="px-6 py-4 text-sm text-gray-700 font-medium">#002</td>
-            <td class="px-6 py-4 text-sm text-gray-600">Under Review (WACV 2026)</td>
-            <td class="px-6 py-4 font-medium text-gray-800">
-              Object Hallucination Mitigation in Large Vision-Language Models
-            </td>
-            <td class="px-6 py-4 text-sm text-gray-600">
-              First author — in final decision phase
-              <br />
-              <a
-                href="https://github.com/shining0611armor/shining0611armor.github.io/blob/main/Images/Uni-adapter.PNG"
-                target="_blank"
-                class="text-blue-500 hover:text-blue-700 underline"
-              >
-                View Image
-              </a>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-</section>
-
-
-<!-- Publications -->
-<section id="publications" class="py-20 bg-white">    <div class="overflow-x-auto shadow-lg rounded-lg bg-white">
-      <table id="pub-table" class="min-w-full divide-y divide-gray-200">
-        <thead class="bg-gray-200">
-          <tr>
-            <th class="px-6 py-3 text-left text-sm font-medium text-gray-700 uppercase">Status</th>
-            <th class="px-6 py-3 text-left text-sm font-medium text-gray-700 uppercase">Title</th>
-            <th class="px-6 py-3 text-left text-sm font-medium text-gray-700 uppercase">Details</th>
-          </tr>
-        </thead>
-        <tbody class="divide-y divide-gray-100">
-          <tr>
-            <td class="px-6 py-4 text-sm text-gray-600">Under Review (AAAI 2026)</td>
-            <td class="px-6 py-4">
-              Test-Time Domain Adaptation for 3D Vision-Language Foundation Models (3D VLFMs)
-            </td>
-            <td class="px-6 py-4 text-sm text-gray-600">
-              First author, Phase 1 accepted | 4 reviewers gave a score of 6 in Phase 2 | Currently in rebuttal
-              <br />
-              <a
-                href="https://github.com/shining0611armor/shining0611armor.github.io/blob/main/Images/TTH.PNG"
-                target="_blank"
-                class="text-blue-500 underline"
-              >
-                View Image
-              </a>
-            </td>
-          </tr>
-
-          <tr>
-            <td class="px-6 py-4 text-sm text-gray-600">Under Review (WACV 2026)</td>
-            <td class="px-6 py-4">
-              Object Hallucination Mitigation in Large Vision-Language Models
-            </td>
-            <td class="px-6 py-4 text-sm text-gray-600">
-              First author, in final decision phase
-              <br />
-              <a
-                href="https://github.com/shining0611armor/shining0611armor.github.io/blob/main/Images/Uni-adapter.PNG"
-                target="_blank"
-                class="text-blue-500 underline"
-              >
-                View Image
-              </a>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-</section>
 
 
 
