--- a/index.html
+++ b/index.html
@@ -146,14 +146,17 @@ I actively collaborate with international scholars on projects targeting top com
       <div>
         <h4 class="text-2xl font-semibold text-gray-700 border-b border-gray-200 pb-2 mb-6">2026</h4>
         <ul class="space-y-6">
+
           <!-- Paper 1 -->
           <li class="flex flex-col sm:flex-row items-start gap-4 bg-gray-50 rounded-xl p-4 shadow-sm hover:shadow-md transition">
-            <img
-              src="https://github.com/shining0611armor/shining0611armor.github.io/raw/main/Images/TTH.PNG"
-              alt="3D VLFM paper"
-              class="publication-thumbnail w-28 h-28 object-cover rounded-lg border border-gray-200"
-              loading="lazy"
-            />
+            <div class="flex-shrink-0 w-full sm:w-48 h-32 bg-white border border-gray-200 rounded-lg overflow-hidden">
+              <img
+                src="https://github.com/shining0611armor/shining0611armor.github.io/raw/main/Images/TTH.PNG"
+                alt="3D VLFM paper"
+                class="w-full h-full object-contain"
+                loading="lazy"
+              />
+            </div>
             <div class="publication-content">
               <a
                 href="https://github.com/shining0611armor/shining0611armor.github.io/blob/main/Images/TTH.PNG"
@@ -173,12 +176,14 @@ I actively collaborate with international scholars on projects targeting top com
 
           <!-- Paper 2 -->
           <li class="flex flex-col sm:flex-row items-start gap-4 bg-gray-50 rounded-xl p-4 shadow-sm hover:shadow-md transition">
-            <img
-              src="https://github.com/shining0611armor/shining0611armor.github.io/raw/main/Images/Uni-adapter.PNG"
-              alt="Object Hallucination Mitigation paper"
-              class="publication-thumbnail w-28 h-28 object-cover rounded-lg border border-gray-200"
-              loading="lazy"
-            />
+            <div class="flex-shrink-0 w-full sm:w-48 h-32 bg-white border border-gray-200 rounded-lg overflow-hidden">
+              <img
+                src="https://github.com/shining0611armor/shining0611armor.github.io/raw/main/Images/Uni-adapter.PNG"
+                alt="Object Hallucination Mitigation paper"
+                class="w-full h-full object-contain"
+                loading="lazy"
+              />
+            </div>
             <div class="publication-content">
               <a
                 href="https://github.com/shining0611armor/shining0611armor.github.io/blob/main/Images/Uni-adapter.PNG"
@@ -200,6 +205,7 @@ I actively collaborate with international scholars on projects targeting top com
     </div>
   </div>
 </section>
+
 
 
 
