--- a/index.html
+++ b/index.html
@@ -159,9 +159,7 @@ I actively collaborate with international scholars on projects targeting top com
             </div>
             <div class="publication-content">
               <a
-                href="https://github.com/shining0611armor/shining0611armor.github.io/blob/main/Images/TTH.PNG"
-                target="_blank"
-                class="text-lg font-semibold text-blue-700 hover:underline"
+                class="text-lg font-semibold text-blue-700 hover"
               >
                 Test-Time Domain Adaptation for 3D Vision-Language Foundation Models (3D VLFMs)
               </a>
@@ -186,9 +184,7 @@ I actively collaborate with international scholars on projects targeting top com
             </div>
             <div class="publication-content">
               <a
-                href="https://github.com/shining0611armor/shining0611armor.github.io/blob/main/Images/Uni-adapter.PNG"
-                target="_blank"
-                class="text-lg font-semibold text-blue-700 hover:underline"
+                class="text-lg font-semibold text-blue-700 hover"
               >
                 Object Hallucination Mitigation in Large Vision-Language Models
               </a>
