--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
       <button id="menuBtn" class="md:hidden text-2xl"><i class="fa-solid fa-bars"></i></button>
       <ul id="navList" class="hidden md:flex gap-6 text-sm">
         <li><a href="#about" class="hover:text-blue-700">About</a></li>
-        <li><a href="#highlights" class="hover:text-blue-700">Highlights</a></li>
-        <li><a href="#skills" class="hover:text-blue-700">Skills</a></li>
         <li><a href="#publications" class="hover:text-blue-700">Publications</a></li>
         <li><a href="#education" class="hover:text-blue-700">Education</a></li>
+        <li><a href="#highlights" class="hover:text-blue-700">Highlights</a></li>
+        <li><a href="#skills" class="hover:text-blue-700">Skills</a></li>
         <li><a href="#academic-experiences" class="hover:text-blue-700">Academic Exp.</a></li>
         <li><a href="#honors" class="hover:text-blue-700">Honors</a></li>
         <li><a href="#languages" class="hover:text-blue-700">Languages</a></li>
@@ -131,8 +131,12 @@ I actively collaborate with international scholars on projects targeting top com
       📑 Publications
     </h2>
 
+
+
+   
     <!-- Search -->
     <div class="flex justify-center mb-10">
+      <button data-count="all" class="btn-count bg-blue-500 text-white px-4 py-2 rounded-full transition"> All </button>
       <input
         id="pub-search"
         type="search"
