--- a/index.html
+++ b/index.html
@@ -134,16 +134,22 @@ I actively collaborate with international scholars on projects targeting top com
 
 
    
-    <!-- Search -->
-    <div class="flex justify-center mb-10">
-      <button data-count="all" class="btn-count bg-blue-500 text-white px-4 py-2 rounded-full transition"> All </button>
-      <input
-        id="pub-search"
-        type="search"
-        placeholder="🔍 Search publications..."
-        class="border border-gray-300 rounded-full px-5 py-2 w-full sm:w-1/2 focus:outline-none focus:ring-2 focus:ring-blue-500 transition"
-      />
-    </div>
+<!-- Search -->
+<div class="flex flex-col sm:flex-row justify-center items-center gap-4 mb-10">
+  <button
+    data-count="all"
+    class="btn-count bg-blue-600 hover:bg-blue-700 text-white font-medium px-5 py-2 rounded-full shadow transition"
+  >
+    All
+  </button>
+  <input
+    id="pub-search"
+    type="search"
+    placeholder="🔍 Search publications..."
+    class="border border-gray-300 rounded-full px-5 py-2 w-full sm:w-1/2 focus:outline-none focus:ring-2 focus:ring-blue-500 transition"
+  />
+</div>
+
 
     <!-- Year Section -->
     <div class="space-y-10">
