--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ I actively collaborate with international scholars on projects targeting top com
 
 
 <!-- Publications -->
-<section id="publications" class="py-20 bg-white">
+<section id="publications" class="py-20">
   <div class="max-w-screen-lg mx-auto px-6" data-aos="fade-up">
     <h2 class="text-4xl font-bold mb-8 text-center uppercase tracking-wide text-gray-800">
       📑 Publications
