--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ I actively collaborate with international scholars on projects targeting top com
 
 
 <!-- Publications -->
-<section id="publications" class="py-20 bg-gray-10">
+<section id="publications" class="py-20 bg-gray-50">
   <div class="max-w-screen-lg mx-auto px-6" data-aos="fade-up">
     <h2 class="text-4xl font-bold mb-8 text-center uppercase tracking-wide text-gray-800">
       📑 Publications
@@ -158,7 +158,7 @@ I actively collaborate with international scholars on projects targeting top com
         <ul class="space-y-6">
 
           <!-- Paper 1 -->
-          <li class="flex flex-col sm:flex-row items-start gap-4 bg-gray-50 rounded-xl p-4 shadow-sm hover:shadow-md transition">
+          <li class="flex flex-col sm:flex-row items-start gap-4 bg-white rounded-xl p-4 shadow-sm hover:shadow-md transition">
             <div class="flex-shrink-0 w-full sm:w-48 h-32 bg-white border border-gray-200 rounded-lg overflow-hidden">
               <img
                 src="https://github.com/shining0611armor/shining0611armor.github.io/raw/main/Images/Uni-adapter.PNG"
@@ -183,7 +183,7 @@ I actively collaborate with international scholars on projects targeting top com
           </li>
 
           <!-- Paper 2 -->
-          <li class="flex flex-col sm:flex-row items-start gap-4 bg-gray-50 rounded-xl p-4 shadow-sm hover:shadow-md transition">
+          <li class="flex flex-col sm:flex-row items-start gap-4 bg-white rounded-xl p-4 shadow-sm hover:shadow-md transition">
             <div class="flex-shrink-0 w-full sm:w-48 h-32 bg-white border border-gray-200 rounded-lg overflow-hidden">
               <img
                 src="https://github.com/shining0611armor/shining0611armor.github.io/raw/main/Images/TTH.PNG"
