--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ I actively collaborate with international scholars on projects targeting top com
                 <strong>Status:</strong> Under Review (AAAI 2026)
               </p>
               <p class="text-sm text-gray-600">
-                First author, Phase 1 accepted | 4 reviewers gave a score of 6 in Phase 2 | Currently in rebuttal
+                First author - Phase 1 accepted | 4 reviewers gave a score of 6 in Phase 2 | Currently in rebuttal
               </p>
             </div>
           </li>
@@ -202,7 +202,7 @@ I actively collaborate with international scholars on projects targeting top com
                 <strong>Status:</strong> Under Review (WACV 2026)
               </p>
               <p class="text-sm text-gray-600">
-                First author, in final decision phase
+                First author - In final decision phase
               </p>
             </div>
           </li>
